[gd_scene load_steps=3 format=3 uid="uid://bnecave51uqxb"]

[ext_resource type="Script" path="res://scenes/screens/game_start_screen.gd" id="1_l8vry"]
[ext_resource type="Texture2D" uid="uid://c8cp5ybcdurt2" path="res://assets/people/others/hug.png" id="2_6vvqq"]

[node name="GameStartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 1.0
offset_right = 3.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l8vry")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "You are loved"

[node name="VoidLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Time alone: "

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play again?"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu
"

[node name="HighscoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Highscore"

[node name="Hug" type="Sprite2D" parent="."]
position = Vector2(79.5, 107.75)
scale = Vector2(0.534375, 0.534375)
texture = ExtResource("2_6vvqq")

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
